// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form in RTL renders Default 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        dir="rtl"
      >
        <form
          class="w-96 p-5 flex flex-col gap-4"
          id="login"
          method="get"
        >
          <div
            class="w-full max-w-full relative z-0"
          >
            <label
              class="w-full block text-bulma pb-2 text-moon-16"
              for="name"
            >
              Username
            </label>
            <input
              class="block w-full max-w-full py-0 px-4 m-0 appearance-none text-moon-16 text-bulma transition-shadow box-border relative z-[2] bg-goku focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none before:box-border after:box-border placeholder:delay-75 placeholder:text-trunks placeholder:opacity-100 placeholder:transition-opacity read-only:outline-0 read-only:border-none read-only:cursor-not-allowed read-only:hover:shadow-input read-only:focus:shadow-input read-only:focus-visible:shadow-input invalid:focus-visible:shadow-input-err invalid:shadow-input-err invalid:hover:shadow-input-err invalid:focus:shadow-input-err h-12 leading-[3rem] rounded-moon-i-sm input-lg-dt-shared shadow-input-err hover:shadow-input-err focus:shadow-input-err focus-visible:shadow-input-err"
              id="name"
              placeholder="Your username..."
            />
            <p
              class="flex gap-1 items-center mt-2 text-moon-12 [&_svg]:text-moon-16 text-chichi"
              role="alert"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 32 32"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M16 21.2778V14.9444M16 12.3056V10.7222M25.5 16C25.5 21.2467 21.2467 25.5 16 25.5C10.7533 25.5 6.5 21.2467 6.5 16C6.5 10.7533 10.7533 6.5 16 6.5C21.2467 6.5 25.5 10.7533 25.5 16Z"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
              Informative message holder
            </p>
          </div>
          <div
            class="w-full max-w-full relative z-0"
          >
            <label
              class="w-full block text-bulma pb-2 text-moon-16"
              for="email"
            >
              Email
            </label>
            <input
              class="block w-full max-w-full py-0 px-4 m-0 appearance-none text-moon-16 text-bulma transition-shadow box-border relative z-[2] bg-goku shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none before:box-border after:box-border placeholder:delay-75 placeholder:text-trunks placeholder:opacity-100 placeholder:transition-opacity read-only:outline-0 read-only:border-none read-only:cursor-not-allowed read-only:hover:shadow-input read-only:focus:shadow-input read-only:focus-visible:shadow-input invalid:focus-visible:shadow-input-err invalid:shadow-input-err invalid:hover:shadow-input-err invalid:focus:shadow-input-err h-12 leading-[3rem] rounded-moon-i-sm input-lg-dt-shared"
              id="email"
              placeholder="Your Email..."
            />
          </div>
          <div
            class="w-full max-w-full relative grid gap-2 grid-cols-3 z-10"
          >
            <div
              class="w-full relative"
            >
              <div
                class="relative"
              >
                <label
                  class="block text-bulma pb-2 text-moon-16"
                  data-headlessui-state=""
                  id="headlessui-listbox-label-:r9:"
                >
                  Day
                </label>
                <div
                  class="relative"
                >
                  <button
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-labelledby="headlessui-listbox-label-:r9: headlessui-listbox-button-:ra:"
                    class="flex items-center justify-between gap-2 w-full bg-goku border-beerus shadow-input hover:shadow-input-hov transition-shadow duration-200 focus:shadow-input-focus focus:outline-none h-10 py-2 px-3 rounded-moon-i-sm"
                    data-headlessui-state=""
                    id="headlessui-listbox-button-:ra:"
                  >
                    <span
                      class="flex w-full flex-col items-start text-start overflow-hidden"
                    >
                      <span
                        class="text-moon-16 w-full text-trunks text-start truncate"
                      />
                    </span>
                    <svg
                      class="text-trunks flex-shrink-0 transition-transform text-moon-24"
                      fill="none"
                      height="1em"
                      viewBox="0 0 32 32"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M22 13L16 19L10 13"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="w-full relative"
            >
              <div
                class="relative"
              >
                <label
                  class="block text-bulma pb-2 text-moon-16"
                  data-headlessui-state=""
                  id="headlessui-listbox-label-:rc:"
                >
                  Month
                </label>
                <div
                  class="relative"
                >
                  <button
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-labelledby="headlessui-listbox-label-:rc: headlessui-listbox-button-:rd:"
                    class="flex items-center justify-between gap-2 w-full bg-goku border-beerus shadow-input hover:shadow-input-hov transition-shadow duration-200 focus:shadow-input-focus focus:outline-none h-10 py-2 px-3 rounded-moon-i-sm"
                    data-headlessui-state=""
                    id="headlessui-listbox-button-:rd:"
                  >
                    <span
                      class="flex w-full flex-col items-start text-start overflow-hidden"
                    >
                      <span
                        class="text-moon-16 w-full text-trunks text-start truncate"
                      />
                    </span>
                    <svg
                      class="text-trunks flex-shrink-0 transition-transform text-moon-24"
                      fill="none"
                      height="1em"
                      viewBox="0 0 32 32"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M22 13L16 19L10 13"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="w-full relative"
            >
              <div
                class="relative"
              >
                <label
                  class="block text-bulma pb-2 text-moon-16"
                  data-headlessui-state=""
                  id="headlessui-listbox-label-:rf:"
                >
                  Year
                </label>
                <div
                  class="relative"
                >
                  <button
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-labelledby="headlessui-listbox-label-:rf: headlessui-listbox-button-:rg:"
                    class="flex items-center justify-between gap-2 w-full bg-goku border-beerus shadow-input hover:shadow-input-hov transition-shadow duration-200 focus:shadow-input-focus focus:outline-none h-10 py-2 px-3 rounded-moon-i-sm"
                    data-headlessui-state=""
                    id="headlessui-listbox-button-:rg:"
                  >
                    <span
                      class="flex w-full flex-col items-start text-start overflow-hidden"
                    >
                      <span
                        class="text-moon-16 w-full text-trunks text-start truncate"
                      />
                    </span>
                    <svg
                      class="text-trunks flex-shrink-0 transition-transform text-moon-24"
                      fill="none"
                      height="1em"
                      viewBox="0 0 32 32"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M22 13L16 19L10 13"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="w-full max-w-full relative z-0"
          >
            <label
              class="w-full block text-bulma pb-2 text-moon-16"
              for="password"
            >
              Password
            </label>
            <input
              class="block w-full max-w-full py-0 px-4 m-0 appearance-none text-moon-16 text-bulma transition-shadow box-border relative z-[2] bg-goku shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none before:box-border after:box-border placeholder:delay-75 placeholder:text-trunks placeholder:opacity-100 placeholder:transition-opacity read-only:outline-0 read-only:border-none read-only:cursor-not-allowed read-only:hover:shadow-input read-only:focus:shadow-input read-only:focus-visible:shadow-input invalid:focus-visible:shadow-input-err invalid:shadow-input-err invalid:hover:shadow-input-err invalid:focus:shadow-input-err h-12 leading-[3rem] rounded-moon-i-sm input-lg-dt-shared"
              id="password"
              type="password"
            />
          </div>
          <div
            class="w-full max-w-full relative z-0"
          >
            <label
              class="w-full block text-bulma pb-2 text-moon-16"
              for="info"
            >
              Additional information
            </label>
            <textarea
              aria-label="Textarea"
              class="block appearance-none resize-none w-full p-4 text-moon-16 text-bulma bg-goku rounded-moon-s-sm placeholder:text-trunks transition-shadow shadow-textarea hover:shadow-textarea-hov focus:shadow-textarea-focus focus:outline-none read-only:outline-0 read-only:border-none read-only:cursor-not-allowed read-only:hover:shadow-textarea read-only:focus:shadow-textarea read-only:focus-visible:shadow-textarea"
              id="info"
            />
          </div>
          <button
            class="px-4 h-10 py-2 gap-2 text-moon-14 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 active:scale-90 text-goten bg-piccolo hover-supported:[&>.hover]:hover:bg-heles"
            form="login"
            type="submit"
            value="Submit"
          >
            Create account
            <span
              class="hover z-[-1] block absolute inset-0 pointer-events-none transition-colors"
            />
          </button>
        </form>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      dir="rtl"
    >
      <form
        class="w-96 p-5 flex flex-col gap-4"
        id="login"
        method="get"
      >
        <div
          class="w-full max-w-full relative z-0"
        >
          <label
            class="w-full block text-bulma pb-2 text-moon-16"
            for="name"
          >
            Username
          </label>
          <input
            class="block w-full max-w-full py-0 px-4 m-0 appearance-none text-moon-16 text-bulma transition-shadow box-border relative z-[2] bg-goku focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none before:box-border after:box-border placeholder:delay-75 placeholder:text-trunks placeholder:opacity-100 placeholder:transition-opacity read-only:outline-0 read-only:border-none read-only:cursor-not-allowed read-only:hover:shadow-input read-only:focus:shadow-input read-only:focus-visible:shadow-input invalid:focus-visible:shadow-input-err invalid:shadow-input-err invalid:hover:shadow-input-err invalid:focus:shadow-input-err h-12 leading-[3rem] rounded-moon-i-sm input-lg-dt-shared shadow-input-err hover:shadow-input-err focus:shadow-input-err focus-visible:shadow-input-err"
            id="name"
            placeholder="Your username..."
          />
          <p
            class="flex gap-1 items-center mt-2 text-moon-12 [&_svg]:text-moon-16 text-chichi"
            role="alert"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 21.2778V14.9444M16 12.3056V10.7222M25.5 16C25.5 21.2467 21.2467 25.5 16 25.5C10.7533 25.5 6.5 21.2467 6.5 16C6.5 10.7533 10.7533 6.5 16 6.5C21.2467 6.5 25.5 10.7533 25.5 16Z"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
            Informative message holder
          </p>
        </div>
        <div
          class="w-full max-w-full relative z-0"
        >
          <label
            class="w-full block text-bulma pb-2 text-moon-16"
            for="email"
          >
            Email
          </label>
          <input
            class="block w-full max-w-full py-0 px-4 m-0 appearance-none text-moon-16 text-bulma transition-shadow box-border relative z-[2] bg-goku shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none before:box-border after:box-border placeholder:delay-75 placeholder:text-trunks placeholder:opacity-100 placeholder:transition-opacity read-only:outline-0 read-only:border-none read-only:cursor-not-allowed read-only:hover:shadow-input read-only:focus:shadow-input read-only:focus-visible:shadow-input invalid:focus-visible:shadow-input-err invalid:shadow-input-err invalid:hover:shadow-input-err invalid:focus:shadow-input-err h-12 leading-[3rem] rounded-moon-i-sm input-lg-dt-shared"
            id="email"
            placeholder="Your Email..."
          />
        </div>
        <div
          class="w-full max-w-full relative grid gap-2 grid-cols-3 z-10"
        >
          <div
            class="w-full relative"
          >
            <div
              class="relative"
            >
              <label
                class="block text-bulma pb-2 text-moon-16"
                data-headlessui-state=""
                id="headlessui-listbox-label-:r9:"
              >
                Day
              </label>
              <div
                class="relative"
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-labelledby="headlessui-listbox-label-:r9: headlessui-listbox-button-:ra:"
                  class="flex items-center justify-between gap-2 w-full bg-goku border-beerus shadow-input hover:shadow-input-hov transition-shadow duration-200 focus:shadow-input-focus focus:outline-none h-10 py-2 px-3 rounded-moon-i-sm"
                  data-headlessui-state=""
                  id="headlessui-listbox-button-:ra:"
                >
                  <span
                    class="flex w-full flex-col items-start text-start overflow-hidden"
                  >
                    <span
                      class="text-moon-16 w-full text-trunks text-start truncate"
                    />
                  </span>
                  <svg
                    class="text-trunks flex-shrink-0 transition-transform text-moon-24"
                    fill="none"
                    height="1em"
                    viewBox="0 0 32 32"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M22 13L16 19L10 13"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
          <div
            class="w-full relative"
          >
            <div
              class="relative"
            >
              <label
                class="block text-bulma pb-2 text-moon-16"
                data-headlessui-state=""
                id="headlessui-listbox-label-:rc:"
              >
                Month
              </label>
              <div
                class="relative"
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-labelledby="headlessui-listbox-label-:rc: headlessui-listbox-button-:rd:"
                  class="flex items-center justify-between gap-2 w-full bg-goku border-beerus shadow-input hover:shadow-input-hov transition-shadow duration-200 focus:shadow-input-focus focus:outline-none h-10 py-2 px-3 rounded-moon-i-sm"
                  data-headlessui-state=""
                  id="headlessui-listbox-button-:rd:"
                >
                  <span
                    class="flex w-full flex-col items-start text-start overflow-hidden"
                  >
                    <span
                      class="text-moon-16 w-full text-trunks text-start truncate"
                    />
                  </span>
                  <svg
                    class="text-trunks flex-shrink-0 transition-transform text-moon-24"
                    fill="none"
                    height="1em"
                    viewBox="0 0 32 32"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M22 13L16 19L10 13"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
          <div
            class="w-full relative"
          >
            <div
              class="relative"
            >
              <label
                class="block text-bulma pb-2 text-moon-16"
                data-headlessui-state=""
                id="headlessui-listbox-label-:rf:"
              >
                Year
              </label>
              <div
                class="relative"
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-labelledby="headlessui-listbox-label-:rf: headlessui-listbox-button-:rg:"
                  class="flex items-center justify-between gap-2 w-full bg-goku border-beerus shadow-input hover:shadow-input-hov transition-shadow duration-200 focus:shadow-input-focus focus:outline-none h-10 py-2 px-3 rounded-moon-i-sm"
                  data-headlessui-state=""
                  id="headlessui-listbox-button-:rg:"
                >
                  <span
                    class="flex w-full flex-col items-start text-start overflow-hidden"
                  >
                    <span
                      class="text-moon-16 w-full text-trunks text-start truncate"
                    />
                  </span>
                  <svg
                    class="text-trunks flex-shrink-0 transition-transform text-moon-24"
                    fill="none"
                    height="1em"
                    viewBox="0 0 32 32"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M22 13L16 19L10 13"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="w-full max-w-full relative z-0"
        >
          <label
            class="w-full block text-bulma pb-2 text-moon-16"
            for="password"
          >
            Password
          </label>
          <input
            class="block w-full max-w-full py-0 px-4 m-0 appearance-none text-moon-16 text-bulma transition-shadow box-border relative z-[2] bg-goku shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none before:box-border after:box-border placeholder:delay-75 placeholder:text-trunks placeholder:opacity-100 placeholder:transition-opacity read-only:outline-0 read-only:border-none read-only:cursor-not-allowed read-only:hover:shadow-input read-only:focus:shadow-input read-only:focus-visible:shadow-input invalid:focus-visible:shadow-input-err invalid:shadow-input-err invalid:hover:shadow-input-err invalid:focus:shadow-input-err h-12 leading-[3rem] rounded-moon-i-sm input-lg-dt-shared"
            id="password"
            type="password"
          />
        </div>
        <div
          class="w-full max-w-full relative z-0"
        >
          <label
            class="w-full block text-bulma pb-2 text-moon-16"
            for="info"
          >
            Additional information
          </label>
          <textarea
            aria-label="Textarea"
            class="block appearance-none resize-none w-full p-4 text-moon-16 text-bulma bg-goku rounded-moon-s-sm placeholder:text-trunks transition-shadow shadow-textarea hover:shadow-textarea-hov focus:shadow-textarea-focus focus:outline-none read-only:outline-0 read-only:border-none read-only:cursor-not-allowed read-only:hover:shadow-textarea read-only:focus:shadow-textarea read-only:focus-visible:shadow-textarea"
            id="info"
          />
        </div>
        <button
          class="px-4 h-10 py-2 gap-2 text-moon-14 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 active:scale-90 text-goten bg-piccolo hover-supported:[&>.hover]:hover:bg-heles"
          form="login"
          type="submit"
          value="Submit"
        >
          Create account
          <span
            class="hover z-[-1] block absolute inset-0 pointer-events-none transition-colors"
          />
        </button>
      </form>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Form in RTL renders WithInsetInput 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        dir="rtl"
      >
        <form
          class="w-96 p-5 flex flex-col gap-4"
          id="login"
          method="get"
        >
          <div
            class="w-full max-w-full relative z-0"
          >
            <div
              class="w-full relative rounded-moon-i-sm bg-goku"
            >
              <input
                class="block w-full py-0 px-4 m-0 appearance-none text-moon-16 text-bulma transition-shadow box-border relative z-[2] bg-transparent focus:outline-none focus-visible::outline-none focus-visible:shadow-input-err h-14 leading-[3.5rem] rounded-moon-i-sm before:box-border after:box-border placeholder:text-trunks placeholder:opacity-100 placeholder:transition-opacity placeholder:delay-75 read-only:outline-0 read-only:border-none read-only:cursor-not-allowed read-only:hover:shadow-input read-only:focus:shadow-input read-only:focus-visible:shadow-input invalid:shadow-input-err invalid:hover:shadow-input-err input-xl-dt-shared invalid:focus:shadow-input-err invalid:focus-visible:shadow-input-err shadow-input-err hover:shadow-input-err focus:shadow-input-err input-xl pt-[1.125rem] input-xl-dt-label"
                placeholder="Your username..."
              />
              <label
                class="absolute text-moon-12 text-trunks top-3 start-4 z-[1] transition-all"
              >
                Username
              </label>
            </div>
            <p
              class="flex gap-1 items-center mt-2 text-moon-12 [&_svg]:text-moon-16 text-chichi"
              role="alert"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 32 32"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M16 21.2778V14.9444M16 12.3056V10.7222M25.5 16C25.5 21.2467 21.2467 25.5 16 25.5C10.7533 25.5 6.5 21.2467 6.5 16C6.5 10.7533 10.7533 6.5 16 6.5C21.2467 6.5 25.5 10.7533 25.5 16Z"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
              Informative message holder
            </p>
          </div>
          <div
            class="w-full max-w-full relative z-0"
          >
            <div
              class="w-full relative rounded-moon-i-sm bg-goku"
            >
              <input
                class="block w-full py-0 px-4 m-0 appearance-none text-moon-16 text-bulma transition-shadow box-border relative z-[2] bg-transparent shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::outline-none focus-visible:shadow-input-err h-14 leading-[3.5rem] rounded-moon-i-sm before:box-border after:box-border placeholder:text-trunks placeholder:opacity-100 placeholder:transition-opacity placeholder:delay-75 read-only:outline-0 read-only:border-none read-only:cursor-not-allowed read-only:hover:shadow-input read-only:focus:shadow-input read-only:focus-visible:shadow-input invalid:shadow-input-err invalid:hover:shadow-input-err input-xl-dt-shared invalid:focus:shadow-input-err invalid:focus-visible:shadow-input-err input-xl pt-[1.125rem] input-xl-dt-label"
                placeholder="Your Email..."
              />
              <label
                class="absolute text-moon-12 text-trunks top-3 start-4 z-[1] transition-all"
              >
                Email
              </label>
            </div>
          </div>
          <div
            class="w-full max-w-full relative z-0"
          >
            <div
              class="w-full relative rounded-moon-i-sm bg-goku"
            >
              <input
                class="block w-full py-0 px-4 m-0 appearance-none text-moon-16 text-bulma transition-shadow box-border relative z-[2] bg-transparent shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::outline-none focus-visible:shadow-input-err h-14 leading-[3.5rem] rounded-moon-i-sm before:box-border after:box-border placeholder:text-trunks placeholder:opacity-100 placeholder:transition-opacity placeholder:delay-75 read-only:outline-0 read-only:border-none read-only:cursor-not-allowed read-only:hover:shadow-input read-only:focus:shadow-input read-only:focus-visible:shadow-input invalid:shadow-input-err invalid:hover:shadow-input-err input-xl-dt-shared invalid:focus:shadow-input-err invalid:focus-visible:shadow-input-err input-xl pt-[1.125rem] input-xl-dt-label"
                placeholder="Your password..."
              />
              <label
                class="absolute text-moon-12 text-trunks top-3 start-4 z-[1] transition-all"
              >
                Password
              </label>
            </div>
          </div>
          <div
            class="w-full max-w-full relative z-0"
          >
            <div
              class="w-full relative rounded-moon-i-sm bg-goku"
            >
              <input
                class="block w-full py-0 px-4 m-0 appearance-none text-moon-16 text-bulma transition-shadow box-border relative z-[2] bg-transparent shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::outline-none focus-visible:shadow-input-err h-14 leading-[3.5rem] rounded-moon-i-sm before:box-border after:box-border placeholder:text-trunks placeholder:opacity-100 placeholder:transition-opacity placeholder:delay-75 read-only:outline-0 read-only:border-none read-only:cursor-not-allowed read-only:hover:shadow-input read-only:focus:shadow-input read-only:focus-visible:shadow-input invalid:shadow-input-err invalid:hover:shadow-input-err input-xl-dt-shared invalid:focus:shadow-input-err invalid:focus-visible:shadow-input-err input-xl pt-[1.125rem] input-xl-dt-label"
                placeholder="Repeat password..."
              />
              <label
                class="absolute text-moon-12 text-trunks top-3 start-4 z-[1] transition-all"
              >
                Password
              </label>
            </div>
          </div>
          <div
            class="w-full max-w-full relative z-0"
          >
            <textarea
              class="block appearance-none resize-none w-full p-4 text-moon-16 text-bulma bg-goku rounded-moon-s-sm placeholder:text-trunks transition-shadow shadow-textarea hover:shadow-textarea-hov focus:shadow-textarea-focus focus:outline-none read-only:outline-0 read-only:border-none read-only:cursor-not-allowed read-only:hover:shadow-textarea read-only:focus:shadow-textarea read-only:focus-visible:shadow-textarea"
              placeholder="Additional information..."
            />
          </div>
          <button
            class="px-4 h-10 py-2 gap-2 text-moon-14 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 active:scale-90 text-goten bg-piccolo hover-supported:[&>.hover]:hover:bg-heles"
            form="login"
            type="submit"
            value="Submit"
          >
            Create account
            <span
              class="hover z-[-1] block absolute inset-0 pointer-events-none transition-colors"
            />
          </button>
        </form>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      dir="rtl"
    >
      <form
        class="w-96 p-5 flex flex-col gap-4"
        id="login"
        method="get"
      >
        <div
          class="w-full max-w-full relative z-0"
        >
          <div
            class="w-full relative rounded-moon-i-sm bg-goku"
          >
            <input
              class="block w-full py-0 px-4 m-0 appearance-none text-moon-16 text-bulma transition-shadow box-border relative z-[2] bg-transparent focus:outline-none focus-visible::outline-none focus-visible:shadow-input-err h-14 leading-[3.5rem] rounded-moon-i-sm before:box-border after:box-border placeholder:text-trunks placeholder:opacity-100 placeholder:transition-opacity placeholder:delay-75 read-only:outline-0 read-only:border-none read-only:cursor-not-allowed read-only:hover:shadow-input read-only:focus:shadow-input read-only:focus-visible:shadow-input invalid:shadow-input-err invalid:hover:shadow-input-err input-xl-dt-shared invalid:focus:shadow-input-err invalid:focus-visible:shadow-input-err shadow-input-err hover:shadow-input-err focus:shadow-input-err input-xl pt-[1.125rem] input-xl-dt-label"
              placeholder="Your username..."
            />
            <label
              class="absolute text-moon-12 text-trunks top-3 start-4 z-[1] transition-all"
            >
              Username
            </label>
          </div>
          <p
            class="flex gap-1 items-center mt-2 text-moon-12 [&_svg]:text-moon-16 text-chichi"
            role="alert"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 21.2778V14.9444M16 12.3056V10.7222M25.5 16C25.5 21.2467 21.2467 25.5 16 25.5C10.7533 25.5 6.5 21.2467 6.5 16C6.5 10.7533 10.7533 6.5 16 6.5C21.2467 6.5 25.5 10.7533 25.5 16Z"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
            Informative message holder
          </p>
        </div>
        <div
          class="w-full max-w-full relative z-0"
        >
          <div
            class="w-full relative rounded-moon-i-sm bg-goku"
          >
            <input
              class="block w-full py-0 px-4 m-0 appearance-none text-moon-16 text-bulma transition-shadow box-border relative z-[2] bg-transparent shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::outline-none focus-visible:shadow-input-err h-14 leading-[3.5rem] rounded-moon-i-sm before:box-border after:box-border placeholder:text-trunks placeholder:opacity-100 placeholder:transition-opacity placeholder:delay-75 read-only:outline-0 read-only:border-none read-only:cursor-not-allowed read-only:hover:shadow-input read-only:focus:shadow-input read-only:focus-visible:shadow-input invalid:shadow-input-err invalid:hover:shadow-input-err input-xl-dt-shared invalid:focus:shadow-input-err invalid:focus-visible:shadow-input-err input-xl pt-[1.125rem] input-xl-dt-label"
              placeholder="Your Email..."
            />
            <label
              class="absolute text-moon-12 text-trunks top-3 start-4 z-[1] transition-all"
            >
              Email
            </label>
          </div>
        </div>
        <div
          class="w-full max-w-full relative z-0"
        >
          <div
            class="w-full relative rounded-moon-i-sm bg-goku"
          >
            <input
              class="block w-full py-0 px-4 m-0 appearance-none text-moon-16 text-bulma transition-shadow box-border relative z-[2] bg-transparent shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::outline-none focus-visible:shadow-input-err h-14 leading-[3.5rem] rounded-moon-i-sm before:box-border after:box-border placeholder:text-trunks placeholder:opacity-100 placeholder:transition-opacity placeholder:delay-75 read-only:outline-0 read-only:border-none read-only:cursor-not-allowed read-only:hover:shadow-input read-only:focus:shadow-input read-only:focus-visible:shadow-input invalid:shadow-input-err invalid:hover:shadow-input-err input-xl-dt-shared invalid:focus:shadow-input-err invalid:focus-visible:shadow-input-err input-xl pt-[1.125rem] input-xl-dt-label"
              placeholder="Your password..."
            />
            <label
              class="absolute text-moon-12 text-trunks top-3 start-4 z-[1] transition-all"
            >
              Password
            </label>
          </div>
        </div>
        <div
          class="w-full max-w-full relative z-0"
        >
          <div
            class="w-full relative rounded-moon-i-sm bg-goku"
          >
            <input
              class="block w-full py-0 px-4 m-0 appearance-none text-moon-16 text-bulma transition-shadow box-border relative z-[2] bg-transparent shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::outline-none focus-visible:shadow-input-err h-14 leading-[3.5rem] rounded-moon-i-sm before:box-border after:box-border placeholder:text-trunks placeholder:opacity-100 placeholder:transition-opacity placeholder:delay-75 read-only:outline-0 read-only:border-none read-only:cursor-not-allowed read-only:hover:shadow-input read-only:focus:shadow-input read-only:focus-visible:shadow-input invalid:shadow-input-err invalid:hover:shadow-input-err input-xl-dt-shared invalid:focus:shadow-input-err invalid:focus-visible:shadow-input-err input-xl pt-[1.125rem] input-xl-dt-label"
              placeholder="Repeat password..."
            />
            <label
              class="absolute text-moon-12 text-trunks top-3 start-4 z-[1] transition-all"
            >
              Password
            </label>
          </div>
        </div>
        <div
          class="w-full max-w-full relative z-0"
        >
          <textarea
            class="block appearance-none resize-none w-full p-4 text-moon-16 text-bulma bg-goku rounded-moon-s-sm placeholder:text-trunks transition-shadow shadow-textarea hover:shadow-textarea-hov focus:shadow-textarea-focus focus:outline-none read-only:outline-0 read-only:border-none read-only:cursor-not-allowed read-only:hover:shadow-textarea read-only:focus:shadow-textarea read-only:focus-visible:shadow-textarea"
            placeholder="Additional information..."
          />
        </div>
        <button
          class="px-4 h-10 py-2 gap-2 text-moon-14 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 active:scale-90 text-goten bg-piccolo hover-supported:[&>.hover]:hover:bg-heles"
          form="login"
          type="submit"
          value="Submit"
        >
          Create account
          <span
            class="hover z-[-1] block absolute inset-0 pointer-events-none transition-colors"
          />
        </button>
      </form>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Form renders Default 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        class="w-96 p-5 flex flex-col gap-4"
        id="login"
        method="get"
      >
        <div
          class="w-full max-w-full relative z-0"
        >
          <label
            class="w-full block text-bulma pb-2 text-moon-16"
            for="name"
          >
            Username
          </label>
          <input
            class="block w-full max-w-full py-0 px-4 m-0 appearance-none text-moon-16 text-bulma transition-shadow box-border relative z-[2] bg-goku focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none before:box-border after:box-border placeholder:delay-75 placeholder:text-trunks placeholder:opacity-100 placeholder:transition-opacity read-only:outline-0 read-only:border-none read-only:cursor-not-allowed read-only:hover:shadow-input read-only:focus:shadow-input read-only:focus-visible:shadow-input invalid:focus-visible:shadow-input-err invalid:shadow-input-err invalid:hover:shadow-input-err invalid:focus:shadow-input-err h-12 leading-[3rem] rounded-moon-i-sm input-lg-dt-shared shadow-input-err hover:shadow-input-err focus:shadow-input-err focus-visible:shadow-input-err"
            id="name"
            placeholder="Your username..."
          />
          <p
            class="flex gap-1 items-center mt-2 text-moon-12 [&_svg]:text-moon-16 text-chichi"
            role="alert"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 21.2778V14.9444M16 12.3056V10.7222M25.5 16C25.5 21.2467 21.2467 25.5 16 25.5C10.7533 25.5 6.5 21.2467 6.5 16C6.5 10.7533 10.7533 6.5 16 6.5C21.2467 6.5 25.5 10.7533 25.5 16Z"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
            Informative message holder
          </p>
        </div>
        <div
          class="w-full max-w-full relative z-0"
        >
          <label
            class="w-full block text-bulma pb-2 text-moon-16"
            for="email"
          >
            Email
          </label>
          <input
            class="block w-full max-w-full py-0 px-4 m-0 appearance-none text-moon-16 text-bulma transition-shadow box-border relative z-[2] bg-goku shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none before:box-border after:box-border placeholder:delay-75 placeholder:text-trunks placeholder:opacity-100 placeholder:transition-opacity read-only:outline-0 read-only:border-none read-only:cursor-not-allowed read-only:hover:shadow-input read-only:focus:shadow-input read-only:focus-visible:shadow-input invalid:focus-visible:shadow-input-err invalid:shadow-input-err invalid:hover:shadow-input-err invalid:focus:shadow-input-err h-12 leading-[3rem] rounded-moon-i-sm input-lg-dt-shared"
            id="email"
            placeholder="Your Email..."
          />
        </div>
        <div
          class="w-full max-w-full relative grid gap-2 grid-cols-3 z-10"
        >
          <div
            class="w-full relative"
          >
            <div
              class="relative"
            >
              <label
                class="block text-bulma pb-2 text-moon-16"
                data-headlessui-state=""
                id="headlessui-listbox-label-:r0:"
              >
                Day
              </label>
              <div
                class="relative"
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-labelledby="headlessui-listbox-label-:r0: headlessui-listbox-button-:r1:"
                  class="flex items-center justify-between gap-2 w-full bg-goku border-beerus shadow-input hover:shadow-input-hov transition-shadow duration-200 focus:shadow-input-focus focus:outline-none h-10 py-2 px-3 rounded-moon-i-sm"
                  data-headlessui-state=""
                  id="headlessui-listbox-button-:r1:"
                >
                  <span
                    class="flex w-full flex-col items-start text-start overflow-hidden"
                  >
                    <span
                      class="text-moon-16 w-full text-trunks text-start truncate"
                    />
                  </span>
                  <svg
                    class="text-trunks flex-shrink-0 transition-transform text-moon-24"
                    fill="none"
                    height="1em"
                    viewBox="0 0 32 32"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M22 13L16 19L10 13"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
          <div
            class="w-full relative"
          >
            <div
              class="relative"
            >
              <label
                class="block text-bulma pb-2 text-moon-16"
                data-headlessui-state=""
                id="headlessui-listbox-label-:r3:"
              >
                Month
              </label>
              <div
                class="relative"
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-labelledby="headlessui-listbox-label-:r3: headlessui-listbox-button-:r4:"
                  class="flex items-center justify-between gap-2 w-full bg-goku border-beerus shadow-input hover:shadow-input-hov transition-shadow duration-200 focus:shadow-input-focus focus:outline-none h-10 py-2 px-3 rounded-moon-i-sm"
                  data-headlessui-state=""
                  id="headlessui-listbox-button-:r4:"
                >
                  <span
                    class="flex w-full flex-col items-start text-start overflow-hidden"
                  >
                    <span
                      class="text-moon-16 w-full text-trunks text-start truncate"
                    />
                  </span>
                  <svg
                    class="text-trunks flex-shrink-0 transition-transform text-moon-24"
                    fill="none"
                    height="1em"
                    viewBox="0 0 32 32"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M22 13L16 19L10 13"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
          <div
            class="w-full relative"
          >
            <div
              class="relative"
            >
              <label
                class="block text-bulma pb-2 text-moon-16"
                data-headlessui-state=""
                id="headlessui-listbox-label-:r6:"
              >
                Year
              </label>
              <div
                class="relative"
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-labelledby="headlessui-listbox-label-:r6: headlessui-listbox-button-:r7:"
                  class="flex items-center justify-between gap-2 w-full bg-goku border-beerus shadow-input hover:shadow-input-hov transition-shadow duration-200 focus:shadow-input-focus focus:outline-none h-10 py-2 px-3 rounded-moon-i-sm"
                  data-headlessui-state=""
                  id="headlessui-listbox-button-:r7:"
                >
                  <span
                    class="flex w-full flex-col items-start text-start overflow-hidden"
                  >
                    <span
                      class="text-moon-16 w-full text-trunks text-start truncate"
                    />
                  </span>
                  <svg
                    class="text-trunks flex-shrink-0 transition-transform text-moon-24"
                    fill="none"
                    height="1em"
                    viewBox="0 0 32 32"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M22 13L16 19L10 13"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="w-full max-w-full relative z-0"
        >
          <label
            class="w-full block text-bulma pb-2 text-moon-16"
            for="password"
          >
            Password
          </label>
          <input
            class="block w-full max-w-full py-0 px-4 m-0 appearance-none text-moon-16 text-bulma transition-shadow box-border relative z-[2] bg-goku shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none before:box-border after:box-border placeholder:delay-75 placeholder:text-trunks placeholder:opacity-100 placeholder:transition-opacity read-only:outline-0 read-only:border-none read-only:cursor-not-allowed read-only:hover:shadow-input read-only:focus:shadow-input read-only:focus-visible:shadow-input invalid:focus-visible:shadow-input-err invalid:shadow-input-err invalid:hover:shadow-input-err invalid:focus:shadow-input-err h-12 leading-[3rem] rounded-moon-i-sm input-lg-dt-shared"
            id="password"
            type="password"
          />
        </div>
        <div
          class="w-full max-w-full relative z-0"
        >
          <label
            class="w-full block text-bulma pb-2 text-moon-16"
            for="info"
          >
            Additional information
          </label>
          <textarea
            aria-label="Textarea"
            class="block appearance-none resize-none w-full p-4 text-moon-16 text-bulma bg-goku rounded-moon-s-sm placeholder:text-trunks transition-shadow shadow-textarea hover:shadow-textarea-hov focus:shadow-textarea-focus focus:outline-none read-only:outline-0 read-only:border-none read-only:cursor-not-allowed read-only:hover:shadow-textarea read-only:focus:shadow-textarea read-only:focus-visible:shadow-textarea"
            id="info"
          />
        </div>
        <button
          class="px-4 h-10 py-2 gap-2 text-moon-14 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 active:scale-90 text-goten bg-piccolo hover-supported:[&>.hover]:hover:bg-heles"
          form="login"
          type="submit"
          value="Submit"
        >
          Create account
          <span
            class="hover z-[-1] block absolute inset-0 pointer-events-none transition-colors"
          />
        </button>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      class="w-96 p-5 flex flex-col gap-4"
      id="login"
      method="get"
    >
      <div
        class="w-full max-w-full relative z-0"
      >
        <label
          class="w-full block text-bulma pb-2 text-moon-16"
          for="name"
        >
          Username
        </label>
        <input
          class="block w-full max-w-full py-0 px-4 m-0 appearance-none text-moon-16 text-bulma transition-shadow box-border relative z-[2] bg-goku focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none before:box-border after:box-border placeholder:delay-75 placeholder:text-trunks placeholder:opacity-100 placeholder:transition-opacity read-only:outline-0 read-only:border-none read-only:cursor-not-allowed read-only:hover:shadow-input read-only:focus:shadow-input read-only:focus-visible:shadow-input invalid:focus-visible:shadow-input-err invalid:shadow-input-err invalid:hover:shadow-input-err invalid:focus:shadow-input-err h-12 leading-[3rem] rounded-moon-i-sm input-lg-dt-shared shadow-input-err hover:shadow-input-err focus:shadow-input-err focus-visible:shadow-input-err"
          id="name"
          placeholder="Your username..."
        />
        <p
          class="flex gap-1 items-center mt-2 text-moon-12 [&_svg]:text-moon-16 text-chichi"
          role="alert"
        >
          <svg
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16 21.2778V14.9444M16 12.3056V10.7222M25.5 16C25.5 21.2467 21.2467 25.5 16 25.5C10.7533 25.5 6.5 21.2467 6.5 16C6.5 10.7533 10.7533 6.5 16 6.5C21.2467 6.5 25.5 10.7533 25.5 16Z"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
          Informative message holder
        </p>
      </div>
      <div
        class="w-full max-w-full relative z-0"
      >
        <label
          class="w-full block text-bulma pb-2 text-moon-16"
          for="email"
        >
          Email
        </label>
        <input
          class="block w-full max-w-full py-0 px-4 m-0 appearance-none text-moon-16 text-bulma transition-shadow box-border relative z-[2] bg-goku shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none before:box-border after:box-border placeholder:delay-75 placeholder:text-trunks placeholder:opacity-100 placeholder:transition-opacity read-only:outline-0 read-only:border-none read-only:cursor-not-allowed read-only:hover:shadow-input read-only:focus:shadow-input read-only:focus-visible:shadow-input invalid:focus-visible:shadow-input-err invalid:shadow-input-err invalid:hover:shadow-input-err invalid:focus:shadow-input-err h-12 leading-[3rem] rounded-moon-i-sm input-lg-dt-shared"
          id="email"
          placeholder="Your Email..."
        />
      </div>
      <div
        class="w-full max-w-full relative grid gap-2 grid-cols-3 z-10"
      >
        <div
          class="w-full relative"
        >
          <div
            class="relative"
          >
            <label
              class="block text-bulma pb-2 text-moon-16"
              data-headlessui-state=""
              id="headlessui-listbox-label-:r0:"
            >
              Day
            </label>
            <div
              class="relative"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-labelledby="headlessui-listbox-label-:r0: headlessui-listbox-button-:r1:"
                class="flex items-center justify-between gap-2 w-full bg-goku border-beerus shadow-input hover:shadow-input-hov transition-shadow duration-200 focus:shadow-input-focus focus:outline-none h-10 py-2 px-3 rounded-moon-i-sm"
                data-headlessui-state=""
                id="headlessui-listbox-button-:r1:"
              >
                <span
                  class="flex w-full flex-col items-start text-start overflow-hidden"
                >
                  <span
                    class="text-moon-16 w-full text-trunks text-start truncate"
                  />
                </span>
                <svg
                  class="text-trunks flex-shrink-0 transition-transform text-moon-24"
                  fill="none"
                  height="1em"
                  viewBox="0 0 32 32"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M22 13L16 19L10 13"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          class="w-full relative"
        >
          <div
            class="relative"
          >
            <label
              class="block text-bulma pb-2 text-moon-16"
              data-headlessui-state=""
              id="headlessui-listbox-label-:r3:"
            >
              Month
            </label>
            <div
              class="relative"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-labelledby="headlessui-listbox-label-:r3: headlessui-listbox-button-:r4:"
                class="flex items-center justify-between gap-2 w-full bg-goku border-beerus shadow-input hover:shadow-input-hov transition-shadow duration-200 focus:shadow-input-focus focus:outline-none h-10 py-2 px-3 rounded-moon-i-sm"
                data-headlessui-state=""
                id="headlessui-listbox-button-:r4:"
              >
                <span
                  class="flex w-full flex-col items-start text-start overflow-hidden"
                >
                  <span
                    class="text-moon-16 w-full text-trunks text-start truncate"
                  />
                </span>
                <svg
                  class="text-trunks flex-shrink-0 transition-transform text-moon-24"
                  fill="none"
                  height="1em"
                  viewBox="0 0 32 32"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M22 13L16 19L10 13"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          class="w-full relative"
        >
          <div
            class="relative"
          >
            <label
              class="block text-bulma pb-2 text-moon-16"
              data-headlessui-state=""
              id="headlessui-listbox-label-:r6:"
            >
              Year
            </label>
            <div
              class="relative"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-labelledby="headlessui-listbox-label-:r6: headlessui-listbox-button-:r7:"
                class="flex items-center justify-between gap-2 w-full bg-goku border-beerus shadow-input hover:shadow-input-hov transition-shadow duration-200 focus:shadow-input-focus focus:outline-none h-10 py-2 px-3 rounded-moon-i-sm"
                data-headlessui-state=""
                id="headlessui-listbox-button-:r7:"
              >
                <span
                  class="flex w-full flex-col items-start text-start overflow-hidden"
                >
                  <span
                    class="text-moon-16 w-full text-trunks text-start truncate"
                  />
                </span>
                <svg
                  class="text-trunks flex-shrink-0 transition-transform text-moon-24"
                  fill="none"
                  height="1em"
                  viewBox="0 0 32 32"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M22 13L16 19L10 13"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="w-full max-w-full relative z-0"
      >
        <label
          class="w-full block text-bulma pb-2 text-moon-16"
          for="password"
        >
          Password
        </label>
        <input
          class="block w-full max-w-full py-0 px-4 m-0 appearance-none text-moon-16 text-bulma transition-shadow box-border relative z-[2] bg-goku shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::shadow-input-focus focus-visible::outline-none before:box-border after:box-border placeholder:delay-75 placeholder:text-trunks placeholder:opacity-100 placeholder:transition-opacity read-only:outline-0 read-only:border-none read-only:cursor-not-allowed read-only:hover:shadow-input read-only:focus:shadow-input read-only:focus-visible:shadow-input invalid:focus-visible:shadow-input-err invalid:shadow-input-err invalid:hover:shadow-input-err invalid:focus:shadow-input-err h-12 leading-[3rem] rounded-moon-i-sm input-lg-dt-shared"
          id="password"
          type="password"
        />
      </div>
      <div
        class="w-full max-w-full relative z-0"
      >
        <label
          class="w-full block text-bulma pb-2 text-moon-16"
          for="info"
        >
          Additional information
        </label>
        <textarea
          aria-label="Textarea"
          class="block appearance-none resize-none w-full p-4 text-moon-16 text-bulma bg-goku rounded-moon-s-sm placeholder:text-trunks transition-shadow shadow-textarea hover:shadow-textarea-hov focus:shadow-textarea-focus focus:outline-none read-only:outline-0 read-only:border-none read-only:cursor-not-allowed read-only:hover:shadow-textarea read-only:focus:shadow-textarea read-only:focus-visible:shadow-textarea"
          id="info"
        />
      </div>
      <button
        class="px-4 h-10 py-2 gap-2 text-moon-14 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 active:scale-90 text-goten bg-piccolo hover-supported:[&>.hover]:hover:bg-heles"
        form="login"
        type="submit"
        value="Submit"
      >
        Create account
        <span
          class="hover z-[-1] block absolute inset-0 pointer-events-none transition-colors"
        />
      </button>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Form renders WithInsetInput 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        class="w-96 p-5 flex flex-col gap-4"
        id="login"
        method="get"
      >
        <div
          class="w-full max-w-full relative z-0"
        >
          <div
            class="w-full relative rounded-moon-i-sm bg-goku"
          >
            <input
              class="block w-full py-0 px-4 m-0 appearance-none text-moon-16 text-bulma transition-shadow box-border relative z-[2] bg-transparent focus:outline-none focus-visible::outline-none focus-visible:shadow-input-err h-14 leading-[3.5rem] rounded-moon-i-sm before:box-border after:box-border placeholder:text-trunks placeholder:opacity-100 placeholder:transition-opacity placeholder:delay-75 read-only:outline-0 read-only:border-none read-only:cursor-not-allowed read-only:hover:shadow-input read-only:focus:shadow-input read-only:focus-visible:shadow-input invalid:shadow-input-err invalid:hover:shadow-input-err input-xl-dt-shared invalid:focus:shadow-input-err invalid:focus-visible:shadow-input-err shadow-input-err hover:shadow-input-err focus:shadow-input-err input-xl pt-[1.125rem] input-xl-dt-label"
              placeholder="Your username..."
            />
            <label
              class="absolute text-moon-12 text-trunks top-3 start-4 z-[1] transition-all"
            >
              Username
            </label>
          </div>
          <p
            class="flex gap-1 items-center mt-2 text-moon-12 [&_svg]:text-moon-16 text-chichi"
            role="alert"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 21.2778V14.9444M16 12.3056V10.7222M25.5 16C25.5 21.2467 21.2467 25.5 16 25.5C10.7533 25.5 6.5 21.2467 6.5 16C6.5 10.7533 10.7533 6.5 16 6.5C21.2467 6.5 25.5 10.7533 25.5 16Z"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
            Informative message holder
          </p>
        </div>
        <div
          class="w-full max-w-full relative z-0"
        >
          <div
            class="w-full relative rounded-moon-i-sm bg-goku"
          >
            <input
              class="block w-full py-0 px-4 m-0 appearance-none text-moon-16 text-bulma transition-shadow box-border relative z-[2] bg-transparent shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::outline-none focus-visible:shadow-input-err h-14 leading-[3.5rem] rounded-moon-i-sm before:box-border after:box-border placeholder:text-trunks placeholder:opacity-100 placeholder:transition-opacity placeholder:delay-75 read-only:outline-0 read-only:border-none read-only:cursor-not-allowed read-only:hover:shadow-input read-only:focus:shadow-input read-only:focus-visible:shadow-input invalid:shadow-input-err invalid:hover:shadow-input-err input-xl-dt-shared invalid:focus:shadow-input-err invalid:focus-visible:shadow-input-err input-xl pt-[1.125rem] input-xl-dt-label"
              placeholder="Your Email..."
            />
            <label
              class="absolute text-moon-12 text-trunks top-3 start-4 z-[1] transition-all"
            >
              Email
            </label>
          </div>
        </div>
        <div
          class="w-full max-w-full relative z-0"
        >
          <div
            class="w-full relative rounded-moon-i-sm bg-goku"
          >
            <input
              class="block w-full py-0 px-4 m-0 appearance-none text-moon-16 text-bulma transition-shadow box-border relative z-[2] bg-transparent shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::outline-none focus-visible:shadow-input-err h-14 leading-[3.5rem] rounded-moon-i-sm before:box-border after:box-border placeholder:text-trunks placeholder:opacity-100 placeholder:transition-opacity placeholder:delay-75 read-only:outline-0 read-only:border-none read-only:cursor-not-allowed read-only:hover:shadow-input read-only:focus:shadow-input read-only:focus-visible:shadow-input invalid:shadow-input-err invalid:hover:shadow-input-err input-xl-dt-shared invalid:focus:shadow-input-err invalid:focus-visible:shadow-input-err input-xl pt-[1.125rem] input-xl-dt-label"
              placeholder="Your password..."
            />
            <label
              class="absolute text-moon-12 text-trunks top-3 start-4 z-[1] transition-all"
            >
              Password
            </label>
          </div>
        </div>
        <div
          class="w-full max-w-full relative z-0"
        >
          <div
            class="w-full relative rounded-moon-i-sm bg-goku"
          >
            <input
              class="block w-full py-0 px-4 m-0 appearance-none text-moon-16 text-bulma transition-shadow box-border relative z-[2] bg-transparent shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::outline-none focus-visible:shadow-input-err h-14 leading-[3.5rem] rounded-moon-i-sm before:box-border after:box-border placeholder:text-trunks placeholder:opacity-100 placeholder:transition-opacity placeholder:delay-75 read-only:outline-0 read-only:border-none read-only:cursor-not-allowed read-only:hover:shadow-input read-only:focus:shadow-input read-only:focus-visible:shadow-input invalid:shadow-input-err invalid:hover:shadow-input-err input-xl-dt-shared invalid:focus:shadow-input-err invalid:focus-visible:shadow-input-err input-xl pt-[1.125rem] input-xl-dt-label"
              placeholder="Repeat password..."
            />
            <label
              class="absolute text-moon-12 text-trunks top-3 start-4 z-[1] transition-all"
            >
              Password
            </label>
          </div>
        </div>
        <div
          class="w-full max-w-full relative z-0"
        >
          <textarea
            class="block appearance-none resize-none w-full p-4 text-moon-16 text-bulma bg-goku rounded-moon-s-sm placeholder:text-trunks transition-shadow shadow-textarea hover:shadow-textarea-hov focus:shadow-textarea-focus focus:outline-none read-only:outline-0 read-only:border-none read-only:cursor-not-allowed read-only:hover:shadow-textarea read-only:focus:shadow-textarea read-only:focus-visible:shadow-textarea"
            placeholder="Additional information..."
          />
        </div>
        <button
          class="px-4 h-10 py-2 gap-2 text-moon-14 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 active:scale-90 text-goten bg-piccolo hover-supported:[&>.hover]:hover:bg-heles"
          form="login"
          type="submit"
          value="Submit"
        >
          Create account
          <span
            class="hover z-[-1] block absolute inset-0 pointer-events-none transition-colors"
          />
        </button>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      class="w-96 p-5 flex flex-col gap-4"
      id="login"
      method="get"
    >
      <div
        class="w-full max-w-full relative z-0"
      >
        <div
          class="w-full relative rounded-moon-i-sm bg-goku"
        >
          <input
            class="block w-full py-0 px-4 m-0 appearance-none text-moon-16 text-bulma transition-shadow box-border relative z-[2] bg-transparent focus:outline-none focus-visible::outline-none focus-visible:shadow-input-err h-14 leading-[3.5rem] rounded-moon-i-sm before:box-border after:box-border placeholder:text-trunks placeholder:opacity-100 placeholder:transition-opacity placeholder:delay-75 read-only:outline-0 read-only:border-none read-only:cursor-not-allowed read-only:hover:shadow-input read-only:focus:shadow-input read-only:focus-visible:shadow-input invalid:shadow-input-err invalid:hover:shadow-input-err input-xl-dt-shared invalid:focus:shadow-input-err invalid:focus-visible:shadow-input-err shadow-input-err hover:shadow-input-err focus:shadow-input-err input-xl pt-[1.125rem] input-xl-dt-label"
            placeholder="Your username..."
          />
          <label
            class="absolute text-moon-12 text-trunks top-3 start-4 z-[1] transition-all"
          >
            Username
          </label>
        </div>
        <p
          class="flex gap-1 items-center mt-2 text-moon-12 [&_svg]:text-moon-16 text-chichi"
          role="alert"
        >
          <svg
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16 21.2778V14.9444M16 12.3056V10.7222M25.5 16C25.5 21.2467 21.2467 25.5 16 25.5C10.7533 25.5 6.5 21.2467 6.5 16C6.5 10.7533 10.7533 6.5 16 6.5C21.2467 6.5 25.5 10.7533 25.5 16Z"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
          Informative message holder
        </p>
      </div>
      <div
        class="w-full max-w-full relative z-0"
      >
        <div
          class="w-full relative rounded-moon-i-sm bg-goku"
        >
          <input
            class="block w-full py-0 px-4 m-0 appearance-none text-moon-16 text-bulma transition-shadow box-border relative z-[2] bg-transparent shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::outline-none focus-visible:shadow-input-err h-14 leading-[3.5rem] rounded-moon-i-sm before:box-border after:box-border placeholder:text-trunks placeholder:opacity-100 placeholder:transition-opacity placeholder:delay-75 read-only:outline-0 read-only:border-none read-only:cursor-not-allowed read-only:hover:shadow-input read-only:focus:shadow-input read-only:focus-visible:shadow-input invalid:shadow-input-err invalid:hover:shadow-input-err input-xl-dt-shared invalid:focus:shadow-input-err invalid:focus-visible:shadow-input-err input-xl pt-[1.125rem] input-xl-dt-label"
            placeholder="Your Email..."
          />
          <label
            class="absolute text-moon-12 text-trunks top-3 start-4 z-[1] transition-all"
          >
            Email
          </label>
        </div>
      </div>
      <div
        class="w-full max-w-full relative z-0"
      >
        <div
          class="w-full relative rounded-moon-i-sm bg-goku"
        >
          <input
            class="block w-full py-0 px-4 m-0 appearance-none text-moon-16 text-bulma transition-shadow box-border relative z-[2] bg-transparent shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::outline-none focus-visible:shadow-input-err h-14 leading-[3.5rem] rounded-moon-i-sm before:box-border after:box-border placeholder:text-trunks placeholder:opacity-100 placeholder:transition-opacity placeholder:delay-75 read-only:outline-0 read-only:border-none read-only:cursor-not-allowed read-only:hover:shadow-input read-only:focus:shadow-input read-only:focus-visible:shadow-input invalid:shadow-input-err invalid:hover:shadow-input-err input-xl-dt-shared invalid:focus:shadow-input-err invalid:focus-visible:shadow-input-err input-xl pt-[1.125rem] input-xl-dt-label"
            placeholder="Your password..."
          />
          <label
            class="absolute text-moon-12 text-trunks top-3 start-4 z-[1] transition-all"
          >
            Password
          </label>
        </div>
      </div>
      <div
        class="w-full max-w-full relative z-0"
      >
        <div
          class="w-full relative rounded-moon-i-sm bg-goku"
        >
          <input
            class="block w-full py-0 px-4 m-0 appearance-none text-moon-16 text-bulma transition-shadow box-border relative z-[2] bg-transparent shadow-input hover:shadow-input-hov focus:shadow-input-focus focus:outline-none focus-visible::outline-none focus-visible:shadow-input-err h-14 leading-[3.5rem] rounded-moon-i-sm before:box-border after:box-border placeholder:text-trunks placeholder:opacity-100 placeholder:transition-opacity placeholder:delay-75 read-only:outline-0 read-only:border-none read-only:cursor-not-allowed read-only:hover:shadow-input read-only:focus:shadow-input read-only:focus-visible:shadow-input invalid:shadow-input-err invalid:hover:shadow-input-err input-xl-dt-shared invalid:focus:shadow-input-err invalid:focus-visible:shadow-input-err input-xl pt-[1.125rem] input-xl-dt-label"
            placeholder="Repeat password..."
          />
          <label
            class="absolute text-moon-12 text-trunks top-3 start-4 z-[1] transition-all"
          >
            Password
          </label>
        </div>
      </div>
      <div
        class="w-full max-w-full relative z-0"
      >
        <textarea
          class="block appearance-none resize-none w-full p-4 text-moon-16 text-bulma bg-goku rounded-moon-s-sm placeholder:text-trunks transition-shadow shadow-textarea hover:shadow-textarea-hov focus:shadow-textarea-focus focus:outline-none read-only:outline-0 read-only:border-none read-only:cursor-not-allowed read-only:hover:shadow-textarea read-only:focus:shadow-textarea read-only:focus-visible:shadow-textarea"
          placeholder="Additional information..."
        />
      </div>
      <button
        class="px-4 h-10 py-2 gap-2 text-moon-14 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 active:scale-90 text-goten bg-piccolo hover-supported:[&>.hover]:hover:bg-heles"
        form="login"
        type="submit"
        value="Submit"
      >
        Create account
        <span
          class="hover z-[-1] block absolute inset-0 pointer-events-none transition-colors"
        />
      </button>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
